manifests/istio/fault-injection/delay/recommendation-virtual-service-delay.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation
spec:
  hosts:
  - recommendation
  http:
  - fault:
      delay:
        fixedDelay: 7.000s
        percentage:
          value: 50
    route:
    - destination:
        host: recommendation
        subset: app-recommendation
